--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@ layout: table_wrappers
 {% include head.html %}
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="BVQntztP2qCgAhSEi4NiQHLdj_b6ps6vSrpiaM_5xH0" />
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-default.css' | relative_url }}">
   <!-- MathJax Configuration and Script -->
